# daemon/src/api/types.ts
@@ -71,6 +71,11 @@ export type RestoreResultDto = ApiDto<"RestoreResult">;
 export type ImportSummaryDto = ApiDto<"ImportSummary">;
 export type ImportSummaryResponseDto = ApiDto<"ImportSummaryResponse">;
 export type ImportProgressEventDto = ApiDto<"ImportProgressEvent">;
+export type ImportDuplicatePolicyDto = ApiDto<"ImportDuplicatePolicy">;
+export type ImportPreviewSummaryDto = ApiDto<"ImportPreviewSummary">;
+export type ImportPreviewRowDto = ApiDto<"ImportPreviewRow">;
+export type ImportPreviewDto = ApiDto<"ImportPreview">;
+export type ImportPreviewResponseDto = ApiDto<"ImportPreviewResponse">;
 export type TimelinePageDto = ApiDto<"TimelinePage">;
 export type SuggestionDto = ApiDto<"Suggestion">;
 export type SuggestionsResponseDto = ApiDto<"SuggestionsResponse">;
